feat(api-gateway):实现 api-gateway的部署

--- a/jaeger/jaeger-service.yaml
+++ b/jaeger/jaeger-service.yaml
@@ -5,11 +5,12 @@ metadata:
   labels:
     app: jaeger
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
     - name: query-http
       port: 16686
       targetPort: 16686
+      nodePort: 31686
     - name: otlp-http
       port: 4371
       targetPort: 4371
