--- a/sheepim-api-gateway/apigateway-service.yaml
+++ b/sheepim-api-gateway/apigateway-service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: go-app-service
+  name: sheepim-api-gateway-service
 spec:
+  type: NodePort
   selector:
-    app: go-app  # 确保与 Pod 的标签匹配
+    app: sheepim-api-gateway-pod  # 确保与 Pod 的标签匹配
   ports:
   - protocol: TCP
-    port: 8001    # Service暴露的端口
-    targetPort: 8000 # 转发到容器的8888端口
-  type: LoadBalancer # 使用 LoadBalancer 类型将端口暴露到外部
+    port: 9100    # Service暴露的端口
+    targetPort: 9100 # 转发到容器的端口
+    nodePort: 31900
+  
