--- a/sheepim-user-service/config-example.yml
+++ b/sheepim-user-service/config-example.yml
@@ -1,12 +1,14 @@
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sheepim-api-gateway-config
+  name: sheepim-user-service-config
 data:
   production.yml: |
     server:
-      listen-address: 0.0.0.0:9100
-      service-name: sheepim-api-gateway
+      listen-address: 0.0.0.0:8888
+      service-name: sheepim-user-service
+
     etcd:
       endpoint:
         - http://etcd-0.etcd-service.default.svc.cluster.local:2379
@@ -14,8 +16,12 @@ data:
         - http://etcd-2.etcd-service.default.svc.cluster.local:2379
 
     open-telemetry:
-      endpoint: jaeger.default.svc.cluster.local:4371
+      endpoint: jaeger.default.svc.cluster.local:4317
 
-    rpc:
-      user-service-name: sheepim-user-service
-      auth-service-name: sheepim-auth-service
+    database:
+      username: xxx
+      password: xx
+      database: xxx
+      address: xxx
+      port: xxx
+
