--- a/personal-project-service/config-example.yml
+++ b/personal-project-service/config-example.yml
@@ -1,12 +1,14 @@
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: sheepim-api-gateway-config
+  name: personal-project-service-config
 data:
   production.yml: |
     server:
-      listen-address: 0.0.0.0:9100
-      service-name: sheepim-api-gateway
+      listen-address: 0.0.0.0:8888
+      service-name: personal-projects-service
+
     etcd:
       endpoint:
         - http://etcd-0.etcd-service.default.svc.cluster.local:2379
@@ -16,7 +18,10 @@ data:
     open-telemetry:
       endpoint: jaeger.default.svc.cluster.local:4317
 
-    rpc:
-      user-service-name: sheepim-user-service
-      auth-service-name: sheepim-auth-service
-      project-service-name: personal-projects-service
+    database:
+      username: xxx
+      password: xx
+      database: xxx
+      address: xxx
+      port: xxx
+
