--- a/personal-feedback-service/deployment.yml
+++ b/personal-feedback-service/deployment.yml
@@ -21,6 +21,18 @@ spec:
             readOnly: true
         ports:
         - containerPort: 8891
+        livenessProbe:                      # 存活探针，用于检测容器是否正常运行
+          tcpSocket:
+            port: 8891
+          initialDelaySeconds: 20           # 容器启动后等待多少秒开始第一次检测
+          periodSeconds: 10                 # 检测的频率（每隔多少秒检测一次）
+          timeoutSeconds: 5                 # 探针检测的超时时间（单位：秒）
+        readinessProbe:                     # 就绪探针，用于检测服务是否可以接受流量
+          tcpSocket:
+            port: 8891
+          initialDelaySeconds: 20            # 容器启动后等待多少秒开始第一次检测
+          periodSeconds: 5                  # 检测的频率（每隔多少秒检测一次）
+          timeoutSeconds: 5                 # 探针检测的超时时间（单位：秒）
       volumes:
       - name: config-volume
         configMap:
