--- a/personal-notify-service/config-example.yml
+++ b/personal-notify-service/config-example.yml
@@ -2,12 +2,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: personal-feedback-service-config
+  name: personal-notify-service-config
 data:
   production.yml: |
     server:
-      listen-address: 0.0.0.0:8891
-      service-name: personal-feedback-service
+      listen-address: 0.0.0.0:8892
+      service-name: personal-notify-service
 
     etcd:
       endpoint:
@@ -18,13 +18,6 @@ data:
     open-telemetry:
       endpoint: jaeger.default.svc.cluster.local:4317
 
-    database:
-      username: xxx
-      password: xx
-      database: xxx
-      address: xxx
-      port: xxx
-    
-    rpc:
-      notify-service-name: personal-notify-service
+    keys:
+      sct-key: xxxx
 
