fix:修复配置文件错误

--- a/sheepim-api-gateway/configmap.yml
+++ b/sheepim-api-gateway/configmap.yml
@@ -21,3 +21,5 @@ data:
       auth-service-name: sheepim-auth-service
       project-service-name: personal-project-service
       feedback-service-name: personal-feedback-service
+      notify-service-name: personal-notify-service
+      room-service-name: sheepim-room-service
