--- a/personal-feedback-service/service.yml
+++ b/personal-feedback-service/service.yml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: personal-feedback-service-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: personal-feedback-service-pod  # 确保与 Pod 的标签匹配
   ports:
