--- a/jaeger/service.yml
+++ b/jaeger/service.yml
@@ -11,9 +11,12 @@ spec:
       port: 16686
       targetPort: 16686
       nodePort: 31686
-    - name: otlp-http
+    - name: otlp-rpc
       port: 4317
       targetPort: 4317
+    - name: otlp-http
+      port: 4318
+      targetPort: 4318
   selector:
     app: jaeger
 
