--- a/sheepim-api-gateway/configmap.yml
+++ b/sheepim-api-gateway/configmap.yml
@@ -14,7 +14,7 @@ data:
         - http://etcd-2.etcd-service.default.svc.cluster.local:2379
 
     open-telemetry:
-      endpoint: jaeger.default.svc.cluster.local:4317
+      endpoint: otelcol-service.default.svc.cluster.local:4317
 
     rpc:
       user-service-name: sheepim-user-service
