feat:实现push-proxy和push-worker的部署

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -88,7 +88,7 @@ http {
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
 
-        location /socket {
+        location /connect {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' "$http_origin" always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
@@ -106,7 +106,7 @@ http {
                 add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
                 add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept';
             }
-            proxy_pass http://localhost:8000/socket;
+            proxy_pass http://localhost:31901/socket;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
