--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,9 +79,10 @@ http {
         }
     }
 
-    server {
+   server {
         listen       443 ssl;
         server_name  socket.peacesheep.xyz;
+
         ssl_certificate     /srv/card/peacesheep.xyz.pem;
         ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
@@ -89,35 +90,40 @@ http {
         ssl_prefer_server_ciphers on;
 
         location /connect {
+            # 处理 OPTIONS 预检请求
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' "$http_origin" always;
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
-                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept' always;
                 add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
                 add_header 'Content-Type' 'text/plain; charset=utf-8';
                 add_header 'Content-Length' 0;
                 return 204;
             }
+
+            # 允许跨域的前端域名
             if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-                add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept';
             }
-            proxy_pass http://localhost:31901/socket;
+
+            # WebSocket 转发
+            proxy_pass http://localhost:31901;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
 
-            # 保持长连接
-            proxy_connect_timeout 360s;
+            # 长连接保持
             proxy_read_timeout 36000s;
             proxy_send_timeout 36000s;
+            proxy_connect_timeout 60s;
+            keepalive_timeout 36000s;
         }
     }
+
 
     server {
         listen       443 ssl;
