feat:增加nextcloud配置文件

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,6 +79,49 @@ http {
         }
     }
 
+    server {
+    listen       443 ssl;
+    server_name  store.peacesheep.xyz;
+
+    ssl_certificate     /srv/card/peacesheep.xyz.pem;
+    ssl_certificate_key /srv/card/peacesheep.xyz.key;
+    ssl_protocols       TLSv1.2 TLSv1.3;
+    ssl_ciphers         HIGH:!aNULL:!MD5;
+    ssl_prefer_server_ciphers on;
+
+    # 处理 OPTIONS 请求，用于 CORS 预检
+    location / {
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+            add_header 'Content-Type' 'text/plain; charset=utf-8';
+            add_header 'Content-Length' 0;
+            return 204;
+        }
+
+        # 处理实际的请求，允许来自指定域的 CORS 请求
+        if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
+            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
+        }
+        # 转发必要的请求头
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_cache_bypass $http_upgrade;
+        # 代理请求到后端服务
+        proxy_pass http://localhost:30000;
+
+        
+    }
+}
+
+
    server {
         listen       443 ssl;
         server_name  socket.peacesheep.xyz;
@@ -102,7 +145,7 @@ http {
             }
 
             # 允许跨域的前端域名
-            if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
+            if ($http_origin ~* (https://store.peacesheep\.xyz)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
