feat(nginx):更新域名

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ http {
     }
     server {
         listen       80;
-        server_name  api.peacesheep.xyz socket.peacesheep.xyz;
+        server_name  api.peacesheep.cn socket.peacesheep.cn;
 
         # 将所有请求重定向到 HTTPS
         return 301 https://$host$request_uri;
@@ -49,9 +49,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  api.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        server_name  api.peacesheep.cn;
+        ssl_certificate     /srv/card/peacesheep.cn.pem;
+        ssl_certificate_key /srv/card/peacesheep.cn.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -67,7 +67,7 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
-            if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
+            if ($http_origin ~* (https://peacesheep\.cn|https://www\.peacesheep\.cn)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -81,10 +81,10 @@ http {
 
     server {
     listen       443 ssl;
-    server_name  store.peacesheep.xyz;
+    server_name  store.peacesheep.cn;
 
-    ssl_certificate     /srv/card/peacesheep.xyz.pem;
-    ssl_certificate_key /srv/card/peacesheep.xyz.key;
+    ssl_certificate     /srv/card/peacesheep.cn.pem;
+    ssl_certificate_key /srv/card/peacesheep.cn.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
@@ -102,7 +102,7 @@ http {
         }
 
         # 处理实际的请求，允许来自指定域的 CORS 请求
-        if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
+        if ($http_origin ~* (https://peacesheep\.cn|https://www\.peacesheep\.cn)) {
             add_header 'Access-Control-Allow-Origin' "$http_origin" always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
             add_header 'Access-Control-Allow-Credentials' 'true' always;
@@ -124,10 +124,10 @@ http {
 
    server {
         listen       443 ssl;
-        server_name  socket.peacesheep.xyz;
+        server_name  socket.peacesheep.cn;
 
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        ssl_certificate     /srv/card/peacesheep.cn.pem;
+        ssl_certificate_key /srv/card/peacesheep.cn.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -145,7 +145,7 @@ http {
             }
 
             # 允许跨域的前端域名
-            if ($http_origin ~* (https://store.peacesheep\.xyz)) {
+            if ($http_origin ~* (https://store.peacesheep\.cn)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -170,9 +170,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  status.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        server_name  status.peacesheep.cn;
+        ssl_certificate     /srv/card/peacesheep.cn.pem;
+        ssl_certificate_key /srv/card/peacesheep.cn.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -185,9 +185,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  metrics.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        server_name  metrics.peacesheep.cn;
+        ssl_certificate     /srv/card/peacesheep.cn.pem;
+        ssl_certificate_key /srv/card/peacesheep.cn.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
