feat(file):更新配置文件

--- a/sheepim-api-gateway/configmap.yml
+++ b/sheepim-api-gateway/configmap.yml
@@ -23,3 +23,4 @@ data:
       feedback-service-name: personal-feedback-service
       notify-service-name: personal-notify-service
       room-service-name: sheepim-room-service
+      file-service-name: personal-file-service
