feat(nginx):更改配置文件

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,4 +1,4 @@
-user root;
+user www-data;
 worker_processes auto;
 error_log /var/log/nginx/error.log debug;
 pid /run/nginx.pid;
@@ -59,9 +59,8 @@ http {
         location /api {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS' always;
                 add_header 'Access-Control-Allow-Credentials' 'true' always;
-                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept' always;
                 add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
                 add_header 'Content-Type' 'text/plain; charset=utf-8';
                 add_header 'Content-Length' 0;
@@ -69,9 +68,8 @@ http {
             }
             if ($http_origin ~* (https://peacesheep\.cn|https://www\.peacesheep\.cn)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
-                add_header 'Access-Control-Allow-Headers' 'Origin,Content-Type,Accept';
                 add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
 
             }
