--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -89,23 +89,7 @@ http {
 
     # 处理 OPTIONS 请求，用于 CORS 预检
     location / {
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-            add_header 'Content-Type' 'text/plain; charset=utf-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
-
-        # 处理实际的请求，允许来自指定域的 CORS 请求
-        if ($http_origin ~* (https://peacesheep\.cn|https://www\.peacesheep\.cn)) {
-            add_header 'Access-Control-Allow-Origin' "$http_origin" always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
-            add_header 'Access-Control-Allow-Credentials' 'true' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-        }
+       
         # 转发必要的请求头
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -193,6 +177,21 @@ http {
         location / {
             proxy_set_header Host $host;
             proxy_pass http://localhost:31690;
+        }
+    }
+
+     server {
+        listen       443 ssl;
+        server_name  kuma.peacesheep.cn;
+        ssl_certificate     /srv/card/peacesheep.cn.pem;
+        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_ciphers         HIGH:!aNULL:!MD5;
+        ssl_prefer_server_ciphers on;
+
+        location / {
+            proxy_set_header Host $host;
+            proxy_pass http://localhost:30001;
         }
     }
 }
