feat:更改后缀为xyz

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -40,7 +40,7 @@ http {
     }
     server {
         listen       80;
-        server_name  api.peacesheep.cn socket.peacesheep.cn;
+        server_name  api.peacesheep.xyz socket.peacesheep.xyz;
 
         # 将所有请求重定向到 HTTPS
         return 301 https://$host$request_uri;
@@ -49,9 +49,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  api.peacesheep.cn;
-        ssl_certificate     /srv/card/peacesheep.cn.pem;
-        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        server_name  api.peacesheep.xyz;
+        ssl_certificate     /srv/card/peacesheep.xyz.pem;
+        ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -66,7 +66,7 @@ http {
                 add_header 'Content-Length' 0;
                 return 204;
             }
-            if ($http_origin ~* (https://peacesheep\.cn|https://www\.peacesheep\.cn)) {
+            if ($http_origin ~* (https://peacesheep\.xyz|https://www\.peacesheep\.xyz)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, DELETE, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -79,10 +79,10 @@ http {
 
     server {
     listen       443 ssl;
-    server_name  store.peacesheep.cn;
+    server_name  store.peacesheep.xyz;
 
-    ssl_certificate     /srv/card/peacesheep.cn.pem;
-    ssl_certificate_key /srv/card/peacesheep.cn.key;
+    ssl_certificate     /srv/card/peacesheep.xyz.pem;
+    ssl_certificate_key /srv/card/peacesheep.xyz.key;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
     ssl_prefer_server_ciphers on;
@@ -106,10 +106,10 @@ http {
 
    server {
         listen       443 ssl;
-        server_name  socket.peacesheep.cn;
+        server_name  socket.peacesheep.xyz;
 
-        ssl_certificate     /srv/card/peacesheep.cn.pem;
-        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        ssl_certificate     /srv/card/peacesheep.xyz.pem;
+        ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -127,7 +127,7 @@ http {
             }
 
             # 允许跨域的前端域名
-            if ($http_origin ~* (https://store.peacesheep\.cn)) {
+            if ($http_origin ~* (https://store.peacesheep\.xyz)) {
                 add_header 'Access-Control-Allow-Origin' "$http_origin";
                 add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
                 add_header 'Access-Control-Allow-Credentials' 'true';
@@ -152,9 +152,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  status.peacesheep.cn;
-        ssl_certificate     /srv/card/peacesheep.cn.pem;
-        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        server_name  status.peacesheep.xyz;
+        ssl_certificate     /srv/card/peacesheep.xyz.pem;
+        ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -167,9 +167,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  metrics.peacesheep.cn;
-        ssl_certificate     /srv/card/peacesheep.cn.pem;
-        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        server_name  metrics.peacesheep.xyz;
+        ssl_certificate     /srv/card/peacesheep.xyz.pem;
+        ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -182,9 +182,9 @@ http {
 
      server {
         listen       443 ssl;
-        server_name  kuma.peacesheep.cn;
-        ssl_certificate     /srv/card/peacesheep.cn.pem;
-        ssl_certificate_key /srv/card/peacesheep.cn.key;
+        server_name  kuma.peacesheep.xyz;
+        ssl_certificate     /srv/card/peacesheep.xyz.pem;
+        ssl_certificate_key /srv/card/peacesheep.xyz.key;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
