--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,43 +1,40 @@
-user www-data;
-worker_processes auto;
-error_log /var/log/nginx/error.log debug;
-pid /run/nginx.pid;
 
-include /usr/share/nginx/modules/*.conf;
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /run/nginx.pid;
+
 
 events {
-    worker_connections 1024;
+    worker_connections  1024;
 }
 
+
 http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
     access_log  /var/log/nginx/access.log  main;
-    client_max_body_size 100m;
-    sendfile            on;
-    tcp_nopush          on;
-    tcp_nodelay         on;
-    keepalive_timeout   65;
-    types_hash_max_size 2048;
 
-    include             /etc/nginx/mime.types;
-    default_type        application/octet-stream;
+    sendfile        on;
+    #tcp_nopush     on;
 
+    keepalive_timeout  65;
 
-    gzip on;
-    gzip_min_length  5k;
-    gzip_buffers     4 16k;
-    gzip_comp_level 3;
-    gzip_types       text/plain application/javascript text/css application/xml text/javascript application/x-httpd-php image/jpeg image/gif image/png;
-    gzip_vary on;
+    gzip  on;
+
     include /etc/nginx/conf.d/*.conf;
 
     map $http_upgrade $connection_upgrade {
         default upgrade;
         '' close;
     }
+
     server {
         listen       80;
         server_name  api.peacesheep.xyz socket.peacesheep.xyz;
@@ -49,9 +46,9 @@ http {
 
     server {
         listen       443 ssl;
-        server_name  api.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        server_name  api.peacesheep.xyz,localhost;
+        ssl_certificate     /etc/letsencrypt/live/peacesheep.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/peacesheep.xyz/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -77,39 +74,13 @@ http {
         }
     }
 
-    server {
-    listen       443 ssl;
-    server_name  store.peacesheep.xyz;
-
-    ssl_certificate     /srv/card/peacesheep.xyz.pem;
-    ssl_certificate_key /srv/card/peacesheep.xyz.key;
-    ssl_protocols       TLSv1.2 TLSv1.3;
-    ssl_ciphers         HIGH:!aNULL:!MD5;
-    ssl_prefer_server_ciphers on;
-
-    # 处理 OPTIONS 请求，用于 CORS 预检
-    location / {
-       
-        # 转发必要的请求头
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_cache_bypass $http_upgrade;
-        # 代理请求到后端服务
-        proxy_pass http://localhost:30000;
-
-        
-    }
-}
-
 
    server {
         listen       443 ssl;
         server_name  socket.peacesheep.xyz;
 
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        ssl_certificate     /etc/letsencrypt/live/peacesheep.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/peacesheep.xyz/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -153,8 +124,8 @@ http {
     server {
         listen       443 ssl;
         server_name  status.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        ssl_certificate     /etc/letsencrypt/live/peacesheep.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/peacesheep.xyz/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -168,8 +139,8 @@ http {
     server {
         listen       443 ssl;
         server_name  metrics.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        ssl_certificate     /etc/letsencrypt/live/peacesheep.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/peacesheep.xyz/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
@@ -183,8 +154,8 @@ http {
      server {
         listen       443 ssl;
         server_name  kuma.peacesheep.xyz;
-        ssl_certificate     /srv/card/peacesheep.xyz.pem;
-        ssl_certificate_key /srv/card/peacesheep.xyz.key;
+        ssl_certificate     /etc/letsencrypt/live/peacesheep.xyz/fullchain.pem;
+        ssl_certificate_key /etc/letsencrypt/live/peacesheep.xyz/privkey.pem;
         ssl_protocols       TLSv1.2 TLSv1.3;
         ssl_ciphers         HIGH:!aNULL:!MD5;
         ssl_prefer_server_ciphers on;
